whitespace header fix, noise fix

--- a/.themes/rackspace/sass/custom/_styles.scss
+++ b/.themes/rackspace/sass/custom/_styles.scss
@@ -1,2 +1,25 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+.embed-video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16/9 ratio */
+    padding-top: 30px; /* IE6 workaround*/
+    height: 0;
+    overflow: hidden;
+}
+
+.embed-video-container iframe,
+.embed-video-container object,
+.embed-video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+p.author {
+  clear:both;
+  font-size:0.85em;
+  margin-bottom:0.8em;
+}
