--- a/.themes/rackspace/sass/partials/_header.scss
+++ b/.themes/rackspace/sass/partials/_header.scss
@@ -1,4 +1,4 @@
-/*body > header {
+body > header {
   background: $header-bg;
   h1 {
     display: inline-block;
@@ -16,4 +16,3 @@
     font-weight: normal;
   }
 }
-*/
