--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -6,13 +6,13 @@
 //$header-padding-bottom: 1.5em;
 
 //$max-width: 1350px;
-//$indented-lists: true;
+$indented-lists: true;
 
 // Padding used for layout margins
-//$pad-min: 18px;
-//$pad-narrow: 25px;
-//$pad-medium: 35px;
-//$pad-wide: 55px;
+$pad-min: 18px;
+$pad-narrow: 25px;
+$pad-medium: 35px;
+$pad-wide: 55px;
 
 // Sidebar widths used in media queries
 //$sidebar-width-medium: 240px;
